@@ -7,6 +7,12 @@ The report list table now made a sidtable.
 
 New clicktotransport icon. Displays on the Register list.
 
+Use xmlreader for subcomments on reports.
+
+Moved from deprecated PHP function eregi to preg_match.
+
+Changed send_email_to function to allow using the user's email as
+from address.
 
 
 Version ClaSS-0.9.32 release (2011/01/17)
